fix wrong java api version for deprecated R03 table read